--- a/index.html
+++ b/index.html
@@ -322,16 +322,22 @@
 
         <section class="video-section">
             <div class="video-container">
-                <div class="video-placeholder">
-                    [Insert Cloudinary Video Link Here]
-                    <br><small>Latest Episode: "My First Day on Twitter"</small>
-                </div>
+                <video controls width="100%" style="border-radius: 10px;">
+                    <source src="https://res.cloudinary.com/dwkkbfefj/video/upload/v1749603369/cpo_csd1ih.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
                 <p style="color: #FFD700; font-size: 1.1rem;">Featured Vlog: Watch C-3PO navigate the complexities of social media</p>
             </div>
 
             <div class="social-buttons">
-                <a href="#" class="social-btn twitter-btn">Follow on Twitter</a>
-                <a href="#" class="social-btn pump-btn">Pump.fun</a>
+                <a href="#" class="social-btn twitter-btn">
+                    <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/6838de5fb56905c169669b27_61w1Q5OxE2L%20(1).png" alt="Twitter" style="width: 24px; height: 24px; margin-right: 10px; vertical-align: middle;">
+                    Follow on Twitter
+                </a>
+                <a href="#" class="social-btn pump-btn">
+                    <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/67eb5f12dc5fd3305d5d1bd1_pump.png" alt="Pump.fun" style="width: 24px; height: 24px; margin-right: 10px; vertical-align: middle;">
+                    Pump.fun
+                </a>
             </div>
         </section>
 
