--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>C-3PO's Galactic Vlogs</title>
+    <link rel="icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/6848d726536aa910b6facaf7_New%20Project%20-%202025-06-11T020801.457.png">
     <style>
         * {
             margin: 0;
@@ -318,12 +319,13 @@
         <header class="header">
             <h1>C-3PO's Galactic Vlogs</h1>
             <p>"The odds of you enjoying this content are quite favorable"</p>
+            <p style="color: #FFD700; font-size: 1.1rem; margin-top: 10px; font-weight: bold;">CA: @C3POVLOGS</p>
         </header>
 
         <section class="video-section">
             <div class="video-container">
                 <video controls width="100%" style="border-radius: 10px;">
-                    <source src="https://res.cloudinary.com/dwkkbfefj/video/upload/v1749603369/cpo_csd1ih.mp4" type="video/mp4">
+                    <source src="https://res.cloudinary.com/dwkkbfefj/video/upload/v1749603769/Untitled_video_-_Made_with_Clipchamp_45_paxxcg.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <p style="color: #FFD700; font-size: 1.1rem;">Featured Vlog: Watch C-3PO navigate the complexities of social media</p>
