--- a/index.html
+++ b/index.html
@@ -332,11 +332,11 @@
             </div>
 
             <div class="social-buttons">
-                <a href="#" class="social-btn twitter-btn">
+                <a href="https://twitter.com/c3povlogs" class="social-btn twitter-btn" target="_blank" rel="noopener noreferrer">
                     <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/6838de5fb56905c169669b27_61w1Q5OxE2L%20(1).png" alt="Twitter" style="width: 24px; height: 24px; margin-right: 10px; vertical-align: middle;">
                     Follow on Twitter
                 </a>
-                <a href="#" class="social-btn pump-btn">
+                <a href="https://pump.fun" class="social-btn pump-btn" target="_blank" rel="noopener noreferrer">
                     <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/67eb5f12dc5fd3305d5d1bd1_pump.png" alt="Pump.fun" style="width: 24px; height: 24px; margin-right: 10px; vertical-align: middle;">
                     Pump.fun
                 </a>
