--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         <header class="header">
             <h1>C-3PO's Galactic Vlogs</h1>
             <p>"The odds of you enjoying this content are quite favorable"</p>
-            <p style="color: #FFD700; font-size: 1.1rem; margin-top: 10px; font-weight: bold;">CA: @C3POVLOGS</p>
+            <p style="color: #FFD700; font-size: 1.1rem; margin-top: 10px; font-weight: bold;">CA: Hya72PBBCxYTDwJ6XsH6xg2NUpmj6qWhjuEQj9jxpump</p>
         </header>
 
         <section class="video-section">
@@ -336,7 +336,7 @@
                     <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/6838de5fb56905c169669b27_61w1Q5OxE2L%20(1).png" alt="Twitter" style="width: 24px; height: 24px; margin-right: 10px; vertical-align: middle;">
                     Follow on Twitter
                 </a>
-                <a href="https://pump.fun" class="social-btn pump-btn" target="_blank" rel="noopener noreferrer">
+                <a href="https://pump.fun/coin/Hya72PBBCxYTDwJ6XsH6xg2NUpmj6qWhjuEQj9jxpump" class="social-btn pump-btn" target="_blank" rel="noopener noreferrer">
                     <img src="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/67eb5f12dc5fd3305d5d1bd1_pump.png" alt="Pump.fun" style="width: 24px; height: 24px; margin-right: 10px; vertical-align: middle;">
                     Pump.fun
                 </a>
