--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C-3PO's Galactic Vlogs</title>
+    <title>C3PO & R2D2 Galactic Travel  Vlogs</title>
     <link rel="icon" type="image/png" href="https://cdn.prod.website-files.com/6740d85c4e3daeef29a89470/6848d726536aa910b6facaf7_New%20Project%20-%202025-06-11T020801.457.png">
     <style>
         * {
